EPSA Crop 6.x-1.2, 2011-04-18
-----------------------------
by yvmarques: Delete jQuery UI theme from EPSACrop folder.
Issue #910398 by dboulet: Document Libraries Module support
Issue #910382 by dboulet: Fixed Text in dialog is not translatable
Issue #910520 by dboulet: Fixed Javascript code cleanup
Issue #921674, by kvantomme: writing px in settings
Issue #1100808 by pkej: Separate the install requirements information
Issue #1109360 by SkidNCrashwell: em tag not closed on message when the module cannot find the required libraries on install

EPSA Crop 6.x-1.1, 2011-01-08
-----------------------------
Fixed #1009608 by adr_p: Two presets selected simultaneously
Fixed #904932 by adr_p, jjwhitney: Restrict available presets per field
Fixed #1005974 by perandre, timezero: Link to www.json.org/json2.js not working
Fixed #1009604 by adr_p: Wrong area selected when dialog is opened

EPSA Crop 6.x-1.0, 2010-08-09
-----------------------------
Fixed by mrfelton, dboulet: Compatibility with jQuery 1.3
Added creation of thumbs for cropping
Fixed #837014 by pelicani: The Init function limits user profiles.
Fixed #822678 by Odd Hill: Failed to load resource: unsupported URL.
Added #725310 by mrfelton: Add support Libraries for Jcrop
Added #859870 by mathieu: Add action crops on URL call instead of theme function
Added #793722 by pkej, yan_nick: Support for rounded corners and all other modules wich interact with imagecache

EPSA Crop 6.x-0.1-beta2, 2010-02-24
-----------------------------------
Fixed #665242 by valic: Multilingual site
Fixed #603234 by yvmarques: Preview image not displayed
Added by yvmarques: Various performances tweak 

EPSA Crop 6.x-0.1-beta1, 2009-10-12
-----------------------------------
Initial release of epsacrop module.