@@ -3,8 +3,8 @@
   margin-left:200px;
 }
 .epsacrop-global{
-  width:850px;
-  height:571px;
+  /* width:850px;
+  height:571px; */
   /* border:1px solid red; */
   position:relative;
 }
