@@ -1,5 +1,6 @@
 name = Epsa Crop
 description = Allow an user to choose coordinates for different presets on an image.
-version = 7.x-1.0
+version = 7.x-2.0
 core = 7.x
 package = Media
+dependencies[] = image
