@@ -39,8 +39,13 @@
         }
         }).load(Drupal.settings.basePath +'?q=crop/dialog/' + type_name + '/' + field_name +'/' + bundle +'/'+ delta, function (){
         try{
-          var preset = $('.epsacrop-presets-menu a[class=selected]').attr('id'); 
-          var coords = $('.epsacrop-presets-menu a[class=selected]').attr('rel').split('x');
+          var item = $('.epsacrop-presets-menu a[class=selected]');
+          var preset = item.attr('id'); 
+          var coords = item.attr('rel').split('x');
+          var aspectRatio = item.attr('data-aspect-ratio');
+          var bgcolor = item.attr('data-bgcolor');
+          var bgopacity = parseFloat(item.attr('data-bgopacity'));
+          
           var w = parseInt(coords[0]);
           var h = parseInt(coords[1]);
           
@@ -57,23 +62,32 @@
           if ((typeof presets[delta] == 'object') && (typeof presets[delta][preset] == 'object') ) {
             var c = presets[delta][preset];
           }
-                              
+          
+          // Change the ratio in numeric
+          if(aspectRatio.length > 0) {
+            if(aspectRatio.split('/').length == 0) {
+              ratios = aspectRatio.split('/');
+              aspectRatio = parseInt(ratios[0]) / parseInt(ratios[1]);
+            }else{
+              aspectRatio = parseFloat(aspectRatio);
+            }
+          }
+                                  
           $('#epsacrop-target').attr({'src': img});
-          console.log(trueSize);
-          console.log(c);
-          console.log(w);
-          console.log(h);
           setTimeout(function(){
             Drupal.EPSACrop.api = $.Jcrop('#epsacrop-target', {
-              aspectRatio: (w / h),
+              aspectRatio: (aspectRatio.length > 0) ? aspectRatio : (w/h),
               trueSize: trueSize,
-              onSelect: Drupal.EPSACrop.update
+              onSelect: Drupal.EPSACrop.update,
+              bgColor: bgcolor,
+              bgOpacity: bgopacity
             }); // $.Jcrop
             // animateTo, to avoid one bug from Jcrop I guess,
             // He doesn't calculate the scale with setSelect at the begining, so
             // I add animateTo after initate the API.
             Drupal.EPSACrop.api.animateTo(((typeof c == 'object') ? [c.x, c.y, c.x2, c.y2] : [0, 0, w, h]));
           }, 1000); // Sleep < one second
+          Drupal.EPSACrop.presets = presets;
         }catch(err) {
           alert(Drupal.t("Error on load : @error", {'@error': err.message}));
         }
@@ -83,18 +97,40 @@
       $('.epsacrop-presets-menu a').removeClass('selected');
       $('.epsacrop-presets-menu a#' + preset).addClass('selected');
       
-      var coords = $('.epsacrop-presets-menu a[class=selected]').attr('rel').split('x');
-      var presets = Drupal.ESPACrop.presets;
+      var item = $('.epsacrop-presets-menu a[class=selected]');
+      var coords = item.attr('rel').split('x');
+      var aspectRatio = item.attr('data-aspect-ratio');
+      var bgcolor = item.attr('data-bgcolor');
+      var bgopacity = parseFloat(item.attr('data-bgopacity'));
+      var presets = Drupal.EPSACrop.presets;
       var delta = Drupal.EPSACrop.delta;
+      
+      var w = parseInt(coords[0]);
+      var h = parseInt(coords[1]);
+      
+      // Change the ratio in numeric
+      if(aspectRatio.length > 0) {
+        if(aspectRatio.split('/').length == 0) {
+          ratios = aspectRatio.split('/');
+          aspectRatio = parseInt(ratios[0]) / parseInt(ratios[1]);
+        }else{
+          aspectRatio = parseFloat(aspectRatio);
+        }
+      }
+
       Drupal.EPSACrop.preset = preset;
       
       if(typeof presets[delta] == 'object' && typeof presets[delta][preset] == 'object' ) {
         var c = presets[delta][preset];
         Drupal.EPSACrop.api.animateTo([c.x, c.y, c.x2, c.y2]);
       }else{
-        Drupal.EPSACrop.api.animateTo([0, 0, coords[0], coords[1]]);
+        Drupal.EPSACrop.api.animateTo([0, 0, w, h]);
       }
-      Drupal.EPSACrop.api.setOptions({aspectRatio: coords[0]/coords[1]});
+      Drupal.EPSACrop.api.setOptions({
+        aspectRatio: (aspectRatio.length > 0) ? aspectRatio : (w/h),
+        bgColor: bgcolor,
+        bgOpacity: bgopacity
+      });
     },
     update: function ( c ) {
       var preset = Drupal.EPSACrop.preset;
